# smirk

./: Cargo.toml  LICENSE  README.md
contrib/: smirk-toggle  smirk.service
src/: data.rs  main.rs  recents.rs
