[package]
name = "smirk"
version = "0.1.0"
edition = "2021"
description = "Emoji picker for Wayland that opens in about 10 ms (GTK4, resident daemon)"
license = "MIT"

[dependencies]
gtk = { package = "gtk4", version = "0.10", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.8", features = ["v1_4"] }
emojis = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
strip = true
opt-level = 2
